--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,43 @@
-./.chattomap
-chattomap/
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg-info/
+dist/
+build/
+
+# Virtual environments
 venv/
 .venv/
 env/
 ENV/
-*.pyc
-__pycache__/
-.DS_Store
+virtualenv/
+
+# Environment variables
 .env
+.env.local
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Project specific
+chattomap/
+debug_columns.txt
+*.ipynb
+*_backup.py
+
+# Logs
+*.log
+
+# References (if temporary)
+References/
