--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,12 @@ env/
 ENV/
 virtualenv/
 
-# Environment variables
+# Environment variables - NEVER COMMIT THESE
 .env
 .env.local
+.env.*.local
+*.env
+!.env.example
 
 # IDE
 .vscode/
